--- a/Code/app/build.gradle
+++ b/Code/app/build.gradle
@@ -41,4 +41,11 @@ dependencies {
 
     // images library
     implementation 'de.hdodenhof:circleimageview:2.2.0'
+
+    implementation 'com.squareup.okhttp3:logging-interceptor:3.10.0'
+
+
+    //retrofit
+    implementation 'com.squareup.retrofit2:retrofit:2.4.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
 }
