--- a/Code/app/build.gradle
+++ b/Code/app/build.gradle
@@ -8,7 +8,7 @@ android {
 
     defaultConfig {
         applicationId "com.example.kpkforestdeptcdegad"
-        minSdkVersion 16
+        minSdkVersion 19
         targetSdkVersion 30
         versionCode 1
         versionName "1.0"
@@ -41,9 +41,10 @@ dependencies {
 
     // images library
     implementation 'de.hdodenhof:circleimageview:2.2.0'
-
     implementation 'com.squareup.okhttp3:logging-interceptor:3.10.0'
 
+    //gallery open
+    implementation 'com.github.dhaval2404:imagepicker:2.1'
 
     //retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.4.0'
