--- a/Code/app/build.gradle
+++ b/Code/app/build.gradle
@@ -49,4 +49,7 @@ dependencies {
     //retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.4.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
+
+    //showing the image to recyclerView
+    implementation 'com.github.bumptech.glide:glide:4.11.0'
 }
